--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
       - libxslt1-dev
       - pkg-config
 install:
-  - pip install -e .
+  - python setup.py install test
   - pip install coveralls
 script:
   - pytest
