Remove flake8, isort, coveragerc to setup.cfg and fix tox

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+---
+sudo: false
 dist: trusty
 language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
+matrix:
+  include:
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.6
+      env: TOXENV=flake8
+    - python: 3.6
+      env: TOXENV=isort
 addons:
   apt:
     packages:
@@ -14,11 +20,9 @@ addons:
       - libxslt1-dev
       - pkg-config
 install:
-  - python setup.py install test
+  - pip install tox
   - pip install coveralls
 script:
-  - pytest
-  - flake8 .
-  - isort --check-onl
+  - tox -e $TOXENV
 after_success:
   - coveralls
