Adds --cov-report to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py36,flake8,isort
 deps=-rrequirements_test.txt
 commands=
     coverage erase
-    pytest --cov --junitxml=junit.xml
+    pytest --cov --cov-report= --junitxml=junit.xml
     coverage xml --fail-under=100 -o coverage.xml
 
 [testenv:flake8]
