--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
   apt:
     packages:
       - libssl-dev
+      - libxml2-dev
       - libxmlsec1
       - libxmlsec1-dev
       - libxmlsec1-openssl
